--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>136周年記念祭・ホーム</title>
 
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/media.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/animate.min.css">
 
